Updated links in the notebooks

--- a/Embedding_Analysis.ipynb
+++ b/Embedding_Analysis.ipynb
@@ -17,7 +17,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This Notebook continues the work of the [previous](https://) one. The evaluation section employs a range of techniques to assess the WavLM model's performance. These methods include both qualitative and quantitative approaches, focusing on the effectiveness of the model in extracting embeddings..\n",
+        "# Exploring Speaker Voice Similarity Across British Accents Using WavLM\n",
+        "# - Part II\n",
+        "\n",
+        "This Notebook continues the work of the [previous](https://github.com/BahneTP/Speaker-Voice-Similarity-Analysis/blob/main/EDA_and_Embedding_Extraction.ipynb) one, and is contains the following steps:\n",
+        "\n",
+        "* Computing speaker similarity using cosine similarity.\n",
+        "* To determine an optimal similarity threshold that distinguishes between speakers accurately.\n",
+        "* To evaluate the system using quantitative metrics such as accuracy and confusion matrices.\n",
+        "* To explore embedding spaces using dimensionality reduction techniques like t-SNE or PCA for clustering analysis.\n",
+        "\n",
+        "An extensive Report can be [accessed here](https://github.com/BahneTP/Speaker-Voice-Similarity-Analysis/blob/main/Bahne_Thiel_Peters_Exploring_Speaker_Voice_Similarity_Across_British_Accents_Using_WavLM.pdf).\n",
         "First, let's load the dataframe we calculated in the previous notebook."
       ],
       "metadata": {
