--- a/EDA_and_Embedding_Extraction.ipynb
+++ b/EDA_and_Embedding_Extraction.ipynb
@@ -3,19 +3,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Problem Statement\n",
+        "# Exploring Speaker Voice Similarity Across British Accents Using WavLM\n",
+        "# - Part I\n",
+        "\n",
         "This notebook focuses on analyzing and evaluating the performance of a pre-trained speech model, WavLM (microsoft/wavlm-base-plus-sv), for speaker voice similarity.\n",
         "\n",
         "The main objectives are:\n",
         "\n",
-        "* To extract embeddings from voice samples using WavLM and compute speaker similarity using cosine similarity.\n",
+        "* Creating and handling the dataset.\n",
+        "* Exploring the dataset.\n",
+        "* Extracting embeddings from voice samples using WavLM\n",
+        "* Computing speaker similarity using cosine similarity.\n",
         "* To determine an optimal similarity threshold that distinguishes between speakers accurately.\n",
         "* To evaluate the system using quantitative metrics such as accuracy and confusion matrices.\n",
         "* To explore embedding spaces using dimensionality reduction techniques like t-SNE or PCA for clustering analysis.\n",
         "\n",
         "The outcomes will inform the potential use of WavLM in Speaker Identification (SID) or Speaker Diarization systems and highlight key performance insights and limitations.\n",
         "\n",
-        "Further work can be seen [here.](https://), and an extensive report [here.](https://)"
+        "This notebook focuses only on the first three points from the above list.\n",
+        "Further work can be seen [here](https://github.com/BahneTP/Speaker-Voice-Similarity-Analysis/blob/main/Embedding_Analysis.ipynb), and an  [extensive report here.](https://github.com/BahneTP/Speaker-Voice-Similarity-Analysis/blob/main/Bahne_Thiel_Peters_Exploring_Speaker_Voice_Similarity_Across_British_Accents_Using_WavLM.pdf)"
       ],
       "metadata": {
         "id": "YF03rhIRNgCw"
